--- a/index.html
+++ b/index.html
@@ -7,17 +7,40 @@
 .title {
   text-align:center;
 }
+.right {
+  text-align:right;
+}
+.image-right {
+  float:right;
+}
+h2 {
+  display:inline;
+}
+.image-class {
+  float:
+}
     </style>
   </head>
   <body>
 <h1 class="title">Whiplash</h1>
-<iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=7d_jQycdQGo&t=1s">
-</iframe>
-<p>An aspiring Musician Andrew (Miles Teller) enrolls in a new music school, Shaffer Conservatory. When practicing, he is approached by the conductor of the highest class in the school, Terence Fletcher (J.K Simmons). Their dynamic goes from inspiring and hopeful, to abusive and destructive. Fletcher wants to create the next Charlie Parker, and will go to any lengths in his power to do so.</p>
-<img src="/img/Miles" alt="Miles">
-<h2>Miles Teller</h2>
-<img src="/img/jk" alt="J.K Simmons">
-<h2>J.K Simmons</h2>
+<img src="img/poster.jpg" alt="poster" class="image-center">
+<br>
+<br>
+<p class="title">An aspiring Musician Andrew (Miles Teller) enrolls in a new music school, Shaffer Conservatory.
+  <br>
+  When practicing, he is approached by the conductor of the highest class in the school, Terence Fletcher (J.K Simmons).
+  <br>
+  Their dynamic goes from inspiring and hopeful, to abusive and destructive.
+  <br>
+  Fletcher wants to create the next Charlie Parker, and will go to any lengths in his power to do so.</p>
+<br>
+<br>
+<br>
+<br>
+<img src="img/Miles.jpg" alt="Miles" height="500" width="700"> <img src="img/jk.jpg" alt="J.K Simmons" height="500" width="700" class="image-right">
+<br>
+<h2>Miles Teller</h2><h2 style="color:white;">_____________________________________________________________________________________________________________________________________</h2> <h2>J.K Simmons</h2>
+<br>
+<br>
   </body>
 </html>
