--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 h2 {
   display:inline;
 }
-.image-class {
-  float:
+.image-center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
     </style>
   </head>
